--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,9 @@
     "scripts": {
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage=true"
+        "test:coverage": "jest --coverage=true",
+        "ci:test:inlinelambda": "jest test/inlineLambdtest.test",
+        "ci:test:s3": "jest test/s3.test"
     },
     "keywords": [],
     "author": "",
