--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
     "name": "rise-aws-foundation",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "",
-    "main": "index.js",
+    "main": "src/index.js",
     "type": "module",
     "scripts": {
         "test": "jest",
