--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,7 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 19.6.0
+            - run: npm i
             - run: npm run test
 #   publish-npm:
 #     needs: test
